# georando

./: GeoGuessr.yaml  README.md  generate.bat  generate.sh  pyproject.toml
geoguessr/data/: Elia-GeoGuessr.yaml  game.json  items.json  locations.json
georando/: checks.py  generate.py  items.py  locations.py  maps.py  settings.py  sightings.py
js/: extension.js  geounity.js
scripts/: generate.py  hints.py
