[project]
requires-python = ">=3.8"

[tool.poetry]
name = "georando"
version = "0.1.0"
description = "GeoGuessr randomizer"
authors = ["arborelia"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
